--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # ide
 .idea
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-.yarn
 
 # testing
 /coverage
@@ -15,13 +10,14 @@
 # production
 /build
 
-# misc
-.DS_Store
+# env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# logs
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# misc
+.DS_Store
