--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "Alice Ievins' author page",
   "repository": "git@github.com:sievins/author-page.git",
   "author": "Samuel Ievins <sievins8012@gmail.com>",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build && node scripts/post-build.js",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -16,14 +25,8 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "glob": "^7.1.6"
   },
   "browserslist": {
     "production": [
