--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Samuel Ievins <sievins8012@gmail.com>",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && node scripts/post-build.js && npm run build:rename",
+    "build": "react-scripts build && npm run build:rename",
     "build:rename": "renamer --find '/fb-preview-logo\\..+\\.jpg/' --replace 'fb-preview-logo.jpg' 'build/static/media/**'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
