--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: CD
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
   workflow_dispatch:
 
@@ -17,11 +17,13 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+          node-version: "14.x"
 
-      - name: Install dependencies and build
+      - name: Install dependencies, lint, test and build
         run: |
           npm install
+          npm run lint:ci
+          npm run test -- --passWithNoTests
           npm run build
 
       - name: Deploy to S3 production environment
@@ -32,16 +34,16 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_PRODUCTION_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-west-1'
-          SOURCE_DIR: 'build'
+          AWS_REGION: "eu-west-1"
+          SOURCE_DIR: "build"
 
       # This breaks the cache so that the new index.html is fetched
       - name: Invalidate root on Cloudfront
         uses: chetan/invalidate-cloudfront-action@v1.3
         env:
           DISTRIBUTION: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }}
-          PATHS: '/'
-          AWS_REGION: 'eu-west-1'
+          PATHS: "/"
+          AWS_REGION: "eu-west-1"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -49,7 +51,7 @@ jobs:
         uses: chetan/invalidate-cloudfront-action@v1.3
         env:
           DISTRIBUTION: ${{ secrets.AWS_CLOUDFRONT_WWW_DISTRIBUTION_ID }}
-          PATHS: '/'
-          AWS_REGION: 'eu-west-1'
+          PATHS: "/"
+          AWS_REGION: "eu-west-1"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
