--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
   workflow_dispatch:
 
@@ -13,15 +13,17 @@ jobs:
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
-      
+
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
-          
-      - name: Install dependencies and build
+          node-version: "14.x"
+
+      - name: Install dependencies, lint, test and build
         run: |
           npm install
+          npm run lint:ci
+          npm run test -- --passWithNoTests
           npm run build
 
       - name: Deploy to S3 staging environment
@@ -32,5 +34,5 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_STAGING_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-west-1'
-          SOURCE_DIR: 'build'
+          AWS_REGION: "eu-west-1"
+          SOURCE_DIR: "build"
