--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "author-page",
-  "version": "0.1.0",
-  "description": "Alice Ievins' author page",
+  "version": "1.0.0",
+  "description": "Alice's author page",
   "repository": "git@github.com:sievins/author-page.git",
   "author": "Samuel Ievins <sievins8012@gmail.com>",
   "scripts": {
@@ -9,11 +9,20 @@
     "build": "npm run build:pre && react-scripts build && npm run build:rename",
     "build:pre": "node src/scripts/pre-build.js",
     "build:rename": "renamer --find '/fb-preview-logo\\..+\\.jpg/' --replace 'fb-preview-logo.jpg' 'build/static/media/**'",
+    "lint": "npx prettier --write .",
+    "lint:ci": "npx prettier --check .",
     "test": "react-scripts test",
+    "prepare": "husky install",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "prettier"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -30,6 +39,10 @@
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.1.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "2.2.1",
     "probe-image-size": "^7.0.1",
     "renamer": "^2.0.1"
   },
