--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - name: Checkout branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: "14.x"
+          node-version: "16"
 
       - name: Install dependencies, lint, test and build
         run: |
@@ -39,7 +39,7 @@ jobs:
 
       # This breaks the cache so that the new index.html is fetched
       - name: Invalidate root on Cloudfront
-        uses: chetan/invalidate-cloudfront-action@v1.3
+        uses: chetan/invalidate-cloudfront-action@v2
         env:
           DISTRIBUTION: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }}
           PATHS: "/"
@@ -48,7 +48,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Invalidate root on Cloudfront for www
-        uses: chetan/invalidate-cloudfront-action@v1.3
+        uses: chetan/invalidate-cloudfront-action@v2
         env:
           DISTRIBUTION: ${{ secrets.AWS_CLOUDFRONT_WWW_DISTRIBUTION_ID }}
           PATHS: "/"
