--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "@testing-library/user-event": "^12.7.4",
     "clsx": "^1.1.1",
     "material-ui-image": "^3.3.2",
+    "path-browserify": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
