--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,7 @@ on:
   pull_request:
     branches:
       - master
-    branches-ignore:
-      - "dependabot/**"
+      - "!dependabot/**"
 
   workflow_dispatch:
 
