--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,8 +2,7 @@ name: CD
 
 on:
   push:
-    branches:
-      -master
+    branches: -master
 
   workflow_dispatch:
 
@@ -20,10 +19,10 @@ jobs:
         with:
           node-version: "16"
 
-      - name: Install dependencies, lint, test and build
+      - name: Install dependencies, style, test and build
         run: |
           npm install
-          npm run lint:ci
+          npm run style:ci
           npm run test -- --passWithNoTests
           npm run build
 
