--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches:
-      - master
-      - "!dependabot/**"
+    branches: -master
 
   workflow_dispatch:
 
@@ -30,6 +28,7 @@ jobs:
 
       - name: Deploy to S3 staging environment
         uses: jakejarvis/s3-sync-action@v0.5.1
+        if: ${{ !startsWith(github.head_ref, "dependabot") }}
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
@@ -38,3 +37,9 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "eu-west-1"
           SOURCE_DIR: "build"
+
+      - name: Automatically merge Dependabot PRs
+        uses: ahmadnassri/action-dependabot-auto-merge@v2
+        with:
+          target: minor
+          github-token: ${{ secrets.GH_ACCESS_TOKEN_REPO_SCOPE }}
