--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Deploy to S3 staging environment
         uses: jakejarvis/s3-sync-action@v0.5.1
-        if: ${{ !startsWith(github.head_ref, "dependabot") }}
+        if: ${{ !startsWith(github.head_ref, 'dependabot') }}
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
