--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
+    "del": "^6.0.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
