--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies, style, test and build
         run: |
-          npm install
+          npm ci
           npm run style:ci
           npm run test -- --passWithNoTests
           npm run build
